# adaptive-context-compression

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
data/dataset/: qa_dataset.json
data/results/: evaluation_results.json
scripts/: evaluate.py  index_document.py
src/: __init__.py  config.py  pipeline.py
src/api/: app.py  routes.py  schemas.py
src/compression/: compressor.py
src/document_processing/: loader.py
src/llm/: groq_client.py
src/retrieval/: vector_store.py
