[project]
name = "adaptive-context-compression"
version = "0.1.0"
description = ""
authors = [
    {name = "ArsenyShchedrin",email = "shchedrin.arsenij@gmail.com"}
]
readme = "README.md"
requires-python = "==3.11.6"
dependencies = [
    "numpy (>=1.24.0,<2.0.0)",
    "fastapi (>=0.115.0,<0.116.0)",
    "uvicorn (>=0.32.1,<0.33.0)",
    "streamlit (>=1.39.0,<1.40.0)",
    "pymupdf (>=1.24.14,<1.25.0)",
    "python-docx (>=1.1.2,<1.2.0)",
    "faiss-cpu (>=1.8.0,<1.9.0)",
    "sentence-transformers (>=3.3.1,<3.4.0)",
    "llmlingua (>=0.2.0)",
    "langchain (>=0.3.0,<1.0.0)",
    "transformers (>=4.26.0,<4.46.0)",
    "langchain-community (>=0.3.0,<1.0.0)",
    "groq (>=0.11.0,<0.12.0)",
    "httpx (>=0.27.0,<0.28.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "rouge-score (>=0.1.2,<0.2.0)",
    "pydantic-settings (>=2.0.0,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
[dependency-groups]
dev = [
    "ruff (>=0.15.4,<0.16.0)"
]
